tests/baselines/reference/moduleAssignmentCompat1.errors.txt
==== tests/cases/compiler/moduleAssignmentCompat1.ts (2 errors) ====
    module A {
        export class C { }
    }
    module B {
        export class C { }
        class D { }
    }
    
    var a: A;
           ~
!!! error TS4022: Type reference cannot refer to container 'A'.
    var b: B;
           ~
!!! error TS4022: Type reference cannot refer to container 'B'.
    
    // no error
    a = b;
    b = a;
    
    